fixed the overflowing chatbar issue

--- a/client/src/components/ChatBar.module.css
+++ b/client/src/components/ChatBar.module.css
@@ -5,8 +5,8 @@
     align-items: flex-start;
     justify-content: space-around;
     min-width:230px;
-    width: 100%;
-    height: 100%;
+    width: 92%;
+    height: 50%;
     border:1px solid black;
     background-color: #f5f5f5;
     border-radius: 5px;
